# transistor-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md
exe/: main.c
src/: sandbox.h  transistor-sandbox.c  transistor-sandbox.h
src/basic/: direction.c  direction.h  orientation.h  pos_ds.c  pos_ds.h  position.c  position.h  rect.c  rect.h
src/board/: board.c  board.h  position.c  position.h  wire.c  wire.h
src/compiler/: compiler.c  compiler.h  connectedwires.c  connectedwires.h
src/component/: component.c  component.h  component_mt.c  component_mt.h  componentdb.c  componentdb.h  componentdef.c  componentdef.h  defaultcomponents.c  defaultcomponents.h  pinpos.h
src/cursor/: cursor.c  cursor.h
src/sandbox/: board.c  board.h  sandbox.c  sandbox.h
src/simulation/: compiler.c  compiler.h  componentsim.c  componentsim.h  simulation.c  simulation.h
src/util/: minmax.h  response.h  result.h  serialize.h  set.h
tests/: _implementation.cc  compilation.cc  components.hh  components.lua  connected_wires.cc  custom_ic.cc  pinpositions.cc  placement.cc  position.cc  serialization.cc  simulation.cc  tests.cc  wrapper.cc
tmp/: defaultcomponents.c  defaultcomponents.h  simulation.c
